crates/keron-lang/tests/corpus/errors/check/match_duplicate_literal_arm.keron
fn label(s: String): Int {
  match s {
    "a" => 1,
    "a" => 2,
    _ => 3,
  }
}
